<resources>
    <string name="app_name">Whole Sale Market</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Home</string>
    <string name="message">Message</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="thank_you">thank_you</string>
    <string name="check">check</string>
    <string name="thanks">Thanks</string>
    <string name="account_information">Account Information</string>
    <string name="language">Language</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="no_cart">No Cart</string>
    <string name="delete">Delete</string>
    <string name="all_products">All Products</string>
    <string name="electronics">Electronics</string>
    <string name="groceries">Groceries</string>
    <string name="home_appliances">Home Appliances</string>
    <string name="cosmetics">Cosmetics</string>
    <string name="jewelry">Jewelry</string>
    <string name="apparel">Apparel</string>
    <string name="vehicle_parts">VehicleParts</string>
    <string name="constructions">Constructions</string>
    <string name="fertilizers">Fertilizers</string>
    <string name="rss">Rs.</string>
    <string name="min_order"> (Min. Order)</string>
    <string name="product_detail">Product Detail</string>
    <string name="rs">Rs.</string>
    <string name="min">(Max. Order)</string>
    <string name="max">(Min. Order)</string>
    <string name="store">Store</string>
    <string name="chat">Chat</string>
    <string name="buy_now">Buy Now</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="start_order">Start Order</string>
    <string name="select_quantity">Select Quantity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>