<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/store"
        android:iconTint="@color/black"
        android:title="@string/store"
        android:icon="@drawable/ic_store"/>

    <item
        android:id="@+id/chat1"
        android:title="@string/chat"
        android:iconTint="@color/black"
        android:icon="@drawable/ic_chat1"/>
    <item
        android:id="@+id/buy"
        android:title="@string/buy_now"
        android:iconTint="@color/teal_700">
    </item>
    <item
        android:id="@+id/add_to_cart"
        android:icon="@android:drawable/ic_menu_add"
        android:iconTint="@color/teal_700"
        android:title="@string/add_to_cart"></item>
</menu>